--- a/src/app/component/add-task/add-task.component.css
+++ b/src/app/component/add-task/add-task.component.css
@@ -3,6 +3,9 @@
     /* border-radius: 5px;
     padding: 20px 10px 20px 10px; */
     width: 500px;
+    position: absolute;
+    top:100px;
+    left: 25pc;
 }
 form{
     margin: 30px 20px 20px 20px;
