--- a/src/app/component/add-task/add-task.component.html
+++ b/src/app/component/add-task/add-task.component.html
@@ -1,42 +1,8 @@
+<app-side-bar></app-side-bar>
 <div class="container shadow-xl p-3 mb-5 bg-white rounded">
     <h3>ASSIGN TASK</h3>
     <hr>
-    <form>
-        <!-- <div class="form-group">
-            <div class="form-row">
-                <div class="col-md-4 mb-3">
-                    <label>First name</label>
-                    <input type="text" class="form-control"  placeholder="First name"  required>
-                </div>
-                <div class="col-md-4 mb-3">
-                <label>Last name</label>
-                <input type="text" class="form-control" placeholder="Last name" required>
-                </div>
-            </div>
-        </div>
-        <div class="form-outline mb-4">
-          <label>Email address</label>
-          <input 
-            type="email" 
-            class="form-control" 
-            placeholder="Enter email">
-          
-        </div>
-        <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-            <label class="form-check-label" for="flexRadioDefault1">
-              Complete 
-            </label>
-        </div>
-        <div class="form-check form-check-inline">
-        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
-        <label class="form-check-label" for="flexRadioDefault2">
-            InCompelete
-        </label>
-        </div>
-        <div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </div> -->
+    <form [formGroup]="taskData"  (ngSubmit)="onAddTask()">
         <div class="row mb-4">
             <div class="col">
               <div class="form-outline">
@@ -85,14 +51,6 @@
                     <label class="form-check-label" for="inlineRadio2">InCompelete</label>
                   </div>
             </div>
-        
-          <!-- Checkbox -->
-          <!-- <div class="form-check d-flex justify-content-center mb-4">
-            <input class="form-check-input me-2" type="checkbox" value="" id="form2Example33" checked />
-            <label class="form-check-label" for="form2Example33">
-              Subscribe to our newsletter
-            </label>
-          </div> -->
         
           <!-- Submit button -->
           <button type="submit" class="btn btn-primary btn-block">Submit</button>
