--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -7,38 +7,35 @@
         </div>
         <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
             <div><h3>SIGN IN</h3></div><br><br>
-          <form>
-            <!-- <div class="d-flex flex-row align-items-center justify-content-center justify-content-lg-start">
-              <p class="lead fw-normal mb-0 me-3">Sign in with</p>
-              <button type="button" class="btn btn-primary btn-floating mx-1">
-                <i class="fab fa-facebook-f"></i>
-              </button>
-  
-              <button type="button" class="btn btn-primary btn-floating mx-1">
-                <i class="fab fa-twitter"></i>
-              </button>
-  
-              <button type="button" class="btn btn-primary btn-floating mx-1">
-                <i class="fab fa-linkedin-in"></i>
-              </button>
-            </div>
-  
-            <div class="divider d-flex align-items-center my-4">
-              <p class="text-center fw-bold mx-3 mb-0">Or</p>
-            </div> -->
-  
+          <form  [formGroup]="loginForm" (ngSubmit)="login()">
+            
             <!-- Email input -->
             <div class="form-outline mb-4">
-              <input type="email" id="form3Example3" class="form-control form-control-lg"
-                placeholder="Enter a valid email address" />
-              <label class="form-label" for="form3Example3">Email address</label>
+              <label class="form-label" for="form3Example3">User Name</label>
+              <input 
+                type="text" 
+                id="form3Example3" 
+                class="form-control form-control-lg"
+                placeholder="Enter a valid user name" 
+                formControlName="username"
+                />
+                <div *ngIf="loginForm.get('username')!.invalid && (loginForm.get('username')!.dirty || loginForm.get('username')!.touched)">
+                  <div class="error" *ngIf="loginForm.get('username')!.errors?.required">Username is required.</div>
+                </div>
             </div>
   
             <!-- Password input -->
             <div class="form-outline mb-3">
-              <input type="password" id="form3Example4" class="form-control form-control-lg"
-                placeholder="Enter password" />
               <label class="form-label" for="form3Example4">Password</label>
+              <input 
+                type="password" 
+                id="form3Example4" 
+                class="form-control form-control-lg"
+                placeholder="Enter password" 
+                formControlName="password"/>
+                <div *ngIf="loginForm.get('password')!.invalid && (loginForm.get('password')!.dirty || loginForm.get('password')!.touched)">
+                  <div class="error" *ngIf="loginForm.get('password')!.errors?.required">Password is required.</div>
+                </div>
             </div>
   
             <div class="d-flex justify-content-between align-items-center">
@@ -53,9 +50,12 @@
             </div>
   
             <div class="text-center text-lg-start mt-4 pt-2">
-              <button type="button" class="btn btn-primary btn-lg"
-                style="padding-left: 2.5rem; padding-right: 2.5rem;">Login</button>
-              <p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <a href="/register"
+              <button 
+                type="submit" 
+                class="btn btn-primary btn-lg"
+                style="padding-left: 2.5rem; padding-right: 2.5rem;"
+                [disabled]="loginForm.invalid">Login</button>
+              <p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? &nbsp;&nbsp;<a href="/register"
                   class="link-danger">Register</a></p>
             </div>
   
