--- a/src/app/component/register/register.component.html
+++ b/src/app/component/register/register.component.html
@@ -9,49 +9,67 @@
   
                   <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
   
-                  <form class="mx-1 mx-md-4">
+                  <form class="mx-1 mx-md-4" [formGroup]="registrationForm" (ngSubmit)="register()">
   
                     <div class="d-flex flex-row align-items-center mb-4">
                       <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                       <div class="form-outline flex-fill mb-0">
-                        <input type="text" id="form3Example1c" class="form-control" />
-                        <label class="form-label" for="form3Example1c">Your Name</label>
+                        <label class="form-label" for="form3Example1c">User Name</label>
+                        <input 
+                          type="text" 
+                          id="form3Example1c" 
+                          class="form-control"
+                          formControlName="username"/>
+                          <div *ngIf="registrationForm.get('username')!.invalid && (registrationForm.get('username')!.dirty || registrationForm.get('username')!.touched)">
+                            <div class="error" *ngIf="registrationForm.get('username')!.errors?.required">Username is required.</div>
+                          </div>
+          
                       </div>
                     </div>
   
                     <div class="d-flex flex-row align-items-center mb-4">
                       <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
                       <div class="form-outline flex-fill mb-0">
-                        <input type="email" id="form3Example3c" class="form-control" />
-                        <label class="form-label" for="form3Example3c">Your Email</label>
+                        <label class="form-label" for="form3Example3c">User Email</label>
+                        <input 
+                          type="email" 
+                          id="form3Example3c" 
+                          class="form-control"
+                          formControlName="email"/>
+                        <div *ngIf="registrationForm.get('email')!.invalid && (registrationForm.get('email')!.dirty || registrationForm.get('email')!.touched)">
+                          <div class="error" *ngIf="registrationForm.get('email')!.errors?.required">Email is required.</div>
+                          <div class="error" *ngIf="registrationForm.get('email')!.errors?.email">Invalid email format.</div>
+                        </div>
                       </div>
                     </div>
   
                     <div class="d-flex flex-row align-items-center mb-4">
                       <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
                       <div class="form-outline flex-fill mb-0">
-                        <input type="password" id="form3Example4c" class="form-control" />
                         <label class="form-label" for="form3Example4c">Password</label>
+                        <input 
+                          type="password" 
+                          id="form3Example4c" 
+                          class="form-control"
+                          formControlName="password"/>
+                          <div *ngIf="registrationForm.get('password')!.invalid && (registrationForm.get('password')!.dirty || registrationForm.get('password')!.touched)">
+                            <div class="error" *ngIf="registrationForm.get('password')!.errors?.required"  >Password is required.</div>
+                          </div>
                       </div>
                     </div>
   
-                    <div class="d-flex flex-row align-items-center mb-4">
-                      <i class="fas fa-key fa-lg me-3 fa-fw"></i>
-                      <div class="form-outline flex-fill mb-0">
-                        <input type="password" id="form3Example4cd" class="form-control" />
-                        <label class="form-label" for="form3Example4cd">Repeat your password</label>
-                      </div>
-                    </div>
-  
-                    <div class="form-check d-flex justify-content-center mb-5">
-                      <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3c" />
+                    <div class="form-check  mb-5">
+                      <input class="form-check-input me-5" type="checkbox" value="" id="form2Example3c" />
                       <label class="form-check-label" for="form2Example3">
                         I agree all statements in <a href="#!">Terms of service</a>
                       </label>
                     </div>
   
                     <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                      <button type="button" class="btn btn-primary btn-lg" routerLink="/Home">Register</button>
+                      <button 
+                        type="submit" 
+                        class="btn btn-primary btn-lg" 
+                        [disabled]="registrationForm.invalid">Register</button>
                     </div>
   
                   </form>
