--- a/src/app/component/side-bar/side-bar.component.html
+++ b/src/app/component/side-bar/side-bar.component.html
@@ -5,6 +5,7 @@
      <a class="s-sidebar__trigger" href="/Home">
        
        <i class="bi bi-list" id="menu-bar"></i>
+       <!-- <div>{{user.username}}</div> -->
        <div><h2 id="h2_complex">TASK MANAGEMENT</h2></div>
      </a>
      <!-- <button class="btn btn-primary" routerLink="/login">LOGOUT</button> -->
@@ -30,6 +31,11 @@
                <i class="bi bi-geo-alt-fill"></i><em>Track Progess</em>
               </a>
            </li>
+           <li class="">
+               <a class="s-sidebar__nav-link" href="/login">
+                  <i class="bi bi-power"></i><em>LOGOUT</em>
+               </a>
+            </li>
         </ul>
      </nav>
 
