--- a/src/app/component/register/register.component.html
+++ b/src/app/component/register/register.component.html
@@ -68,8 +68,7 @@
                     <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
                       <button 
                         type="submit" 
-                        class="btn btn-primary btn-lg" 
-                        [disabled]="registrationForm.invalid">Register</button>
+                        class="btn btn-primary btn-lg">Register</button>
                     </div>
   
                   </form>
