crud operation almost

--- a/src/app/component/side-bar/side-bar.component.html
+++ b/src/app/component/side-bar/side-bar.component.html
@@ -13,27 +13,27 @@
         <ul>
          <li>
             <!-- <i class="bi bi-person-circle"></i> -->
-            <em><h3 style="color: white;margin-top: -15px;margin-left: 20px;">{{username}}</h3></em>
+            <em><h3 style="color: white;margin-left: 20px;">{{username}}</h3></em>
          </li><br>
          <hr>
            <li>
               <a class="s-sidebar__nav-link" href="/Home">
-               <i class="bi bi-house-door-fill"></i><em>Home<span class="sr-only"></span></em>
+               <i class="bi bi-house-door-fill"></i><em>HOME<span class="sr-only"></span></em>
               </a>
            </li>
            <li>
              <a class="s-sidebar__nav-link" href="/addTask">
-               <i class="bi bi-plus-circle"></i><em>Add New Task</em>
+               <i class="bi bi-plus-circle"></i><em>ADD NEW TASK</em>
              </a>
           </li>
            <li>
               <a class="s-sidebar__nav-link" href="/viewtask">
-               <i class="bi bi-journal-check"></i><em>View Details</em>
+               <i class="bi bi-journal-check"></i><em>VIEW DETAILS</em>
               </a>
            </li>
            <li>
               <a class="s-sidebar__nav-link" href="/track">
-               <i class="bi bi-geo-alt-fill"></i><em>Track Progess</em>
+               <i class="bi bi-geo-alt-fill"></i><em>TRACK PROGRESS</em>
               </a>
            </li>
            <li>
