--- a/src/app/component/add-task/add-task.component.css
+++ b/src/app/component/add-task/add-task.component.css
@@ -1,11 +1,11 @@
 .container{
-     border: 1px solid grey;
+     /* border: 1px solid grey; */
     /* border-radius: 5px;
     padding: 20px 10px 20px 10px; */
-    width: 500px;
+    width: 700px;
     position: absolute;
-    top:100px;
-    left: 25pc;
+    top:80px;
+    left: 15pc;
 }
 form{
     margin: 30px 20px 20px 20px;
