--- a/src/app/component/add-task/add-task.component.html
+++ b/src/app/component/add-task/add-task.component.html
@@ -2,58 +2,97 @@
 <div class="container shadow-xl p-3 mb-5 bg-white rounded">
     <h3>ASSIGN TASK</h3>
     <hr>
-    <form [formGroup]="taskData"  (ngSubmit)="onAddTask()">
+    <form   (ngSubmit)="onAddTask()">  
         <div class="row mb-4">
             <div class="col">
               <div class="form-outline">
-                <label class="form-label" for="form3Example1">First name :</label>
-                <input type="text" id="form3Example1" class="form-control" />
+                <label class="form-label" for="firstname">First name :</label>
+                <input 
+                  type="text" 
+                  id="firstname" 
+                  class="form-control"
+                  name="firstname"
+                  [(ngModel)]="taskData.firstname" />
                 
               </div>
             </div>
             <div class="col">
               <div class="form-outline">
-                <label class="form-label" for="form3Example2">Last name :</label>
-                <input type="text" id="form3Example2" class="form-control" />
+                <label 
+                  class="form-label" 
+                  for="lastname">Last name :</label>
+                <input 
+                  type="text" 
+                  id="lastname" 
+                  class="form-control"
+                  name="lastname"
+                  [(ngModel)]="taskData.lastname" />
               </div>
             </div>
           </div>
         
           <!-- Email input -->
           <div class="form-outline mb-4">
-            <label class="form-label" for="form3Example3">Email address :</label>
-            <input type="email" id="form3Example3" class="form-control" />
+            <label class="email" for="form3Example3">Email address :</label>
+            <input 
+              type="email" 
+              id="email" 
+              class="form-control" 
+              name="email"
+              [(ngModel)]="taskData.email"/>
           </div>
           <!-- Message input -->
             <div class="form-outline mb-4">
-                <label class="form-label" for="form6Example7">Task Description :</label>
-                <textarea class="form-control" id="form6Example7" rows="4"></textarea>
+                <label class="form-label" for="task_description">Task Description :</label>
+                <textarea 
+                  class="form-control" 
+                  id="task_description" rows="4"
+                  name="task_description"
+                  [(ngModel)]="taskData.task_description"></textarea>
             </div>
             <!-- date/time -->
             <div>
                 <label htmlFor="name">Start Time :</label>
                 <input type="datetime-local"  
-                    className='form-control' />&nbsp;&nbsp;&nbsp;&nbsp;
+                    className='form-control'
+                    name="start_time"
+                    [(ngModel)]="taskData.start_time" />&nbsp;&nbsp;&nbsp;&nbsp;
 
                 <label htmlFor="name">End Time :</label>
                 <input type="datetime-local"  
-                    className='form-control' />
+                    className='form-control' 
+                    name="end_time"
+                    [(ngModel)]="taskData.end_time"/>
             </div><br><br>
 
             <div class="d-flex justify-content-center mb-4">
                 <label>Status :</label>&nbsp;&nbsp;&nbsp;
                 <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                    <input 
+                      class="form-check-input" 
+                      type="radio" 
+                      name="status" 
+                      id="inlineRadio1" 
+                      value="Complete"
+                      [(ngModel)]="taskData.status">
                     <label class="form-check-label" for="inlineRadio1">Complete</label>
                   </div>
                   <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+                    <input 
+                      class="form-check-input" 
+                      type="radio" 
+                      name="status" 
+                      id="inlineRadio2" 
+                      value="InCompelete"
+                      [(ngModel)]="taskData.status">
                     <label class="form-check-label" for="inlineRadio2">InCompelete</label>
                   </div>
             </div>
         
           <!-- Submit button -->
-          <button type="submit" class="btn btn-primary btn-block">Submit</button>
+          <button 
+            type="submit" 
+            class="btn btn-primary btn-block">Submit</button>
       </form>
     
 </div>
