--- a/src/app/component/add-task/add-task.component.html
+++ b/src/app/component/add-task/add-task.component.html
@@ -1,4 +1,5 @@
 <app-side-bar></app-side-bar>
+
 <div class="container shadow-xl p-3 mb-5 bg-white rounded">
     <h3>ASSIGN TASK</h3>
     <hr>
@@ -93,6 +94,7 @@
           <button 
             type="submit" 
             class="btn btn-primary btn-block">Submit</button>
+            <!-- <input type="reset" value="Reset"> -->
       </form>
     
 </div>
