--- a/src/app/component/side-bar/side-bar.component.html
+++ b/src/app/component/side-bar/side-bar.component.html
@@ -32,7 +32,7 @@
               </a>
            </li>
            <li>
-              <a class="s-sidebar__nav-link" href="/track">
+              <a class="s-sidebar__nav-link">
                <i class="bi bi-geo-alt-fill"></i><em>TRACK PROGRESS</em>
               </a>
            </li>
