--- a/src/app/component/register/register.component.html
+++ b/src/app/component/register/register.component.html
@@ -58,17 +58,13 @@
                       </div>
                     </div>
   
-                    <div class="form-check  mb-5">
-                      <input class="form-check-input me-5" type="checkbox" value="" id="form2Example3c" />
-                      <label class="form-check-label" for="form2Example3">
-                        I agree all statements in <a href="#!">Terms of service</a>
-                      </label>
-                    </div>
-  
                     <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
                       <button 
                         type="submit" 
                         class="btn btn-primary btn-lg">Register</button>
+                    </div>
+                    <div class="d-flex justify-content-center">
+                      <b>User Already Registered <i class="bi bi-arrow-right-circle-fill"></i>&nbsp; <a href="/login">SignIn Page</a></b>
                     </div>
   
                   </form>
