--- a/src/app/component/side-bar/side-bar.component.html
+++ b/src/app/component/side-bar/side-bar.component.html
@@ -34,11 +34,11 @@
                   <i class="bi bi-journal-check"></i><em>VIEW DETAILS</em>
                </a>
             </li>
-            <li>
-               <a class="s-sidebar__nav-link">
+            <!-- <li>
+               <a class="s-sidebar__nav-link" href="/track-progess">
                   <i class="bi bi-geo-alt-fill"></i><em>TRACK PROGRESS</em>
                </a>
-            </li>
+            </li> -->
             <li>
                <a class="s-sidebar__nav-link" href="javascript:void(0)" (click)="logut()">
                   <i class="bi bi-power"></i><em>LOGOUT</em>
