--- a/src/app/component/view-task/view-task.component.css
+++ b/src/app/component/view-task/view-task.component.css
@@ -7,3 +7,14 @@
     top: 8pc;
     left:15pc;
 }
+.pending {
+    color: red;
+  }
+  
+  .inprogress {
+    color: blue;
+  }
+  
+  .complete {
+    color: green;
+  }
