--- a/src/app/component/register/register.component.html
+++ b/src/app/component/register/register.component.html
@@ -57,6 +57,24 @@
                           </div>
                       </div>
                     </div>
+                    <div class="d-flex flex-row align-items-center mb-4">
+                      <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
+                      <div class="form-outline flex-fill mb-0">
+                        <label class="form-label" for="form3Example4c">Confirm Password</label>
+                        <input 
+                          type="password" 
+                          id="form3Example4c" 
+                          class="form-control"
+                          formControlName="confirmPassword"/>
+                          <div *ngIf="registrationForm.get('confirmPassword')!.invalid && (registrationForm.get('confirmPassword')!.dirty || registrationForm.get('confirmPassword')!.touched)">
+                            <div class="error" *ngIf="registrationForm.get('confirmPassword')!.errors?.required"  >confirm Password is required.</div>
+                            <div class="error" *ngIf="registrationForm.controls['confirmPassword'].hasError('passwordMismatch')">Passwords do not match.</div>
+                          </div>
+                      </div>
+                    </div>
+                    <!-- <div *ngIf="registrationForm.controls.confirmpassValue.invalid">
+                      <p style="color: red;">Password and ConfirmPassword is Not Matching !!</p>
+                    </div> -->
   
                     <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
                       <button 
